<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@mipmap/huaweilogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:padding="10dp"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/asr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/buttonshape"
            android:text="@string/automatic_speech_recognition"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tts"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonshape"
            android:text="@string/text_to_speech"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/translate"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonshape"
            android:text="@string/translation"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/langdetect"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonshape"
            android:text="@string/language_detection"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/aft"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonshape"
            android:text="@string/audio_file_transcription"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>